# Windrose-Modding

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.local/: .env.example
modding_tools/: README.md  windrose_mod_cli.py
modding_tools/scripts/: build_mod.ps1  install_toolchain.ps1  run_tests.ps1
modding_tools/tests/: test_windrose_mod_cli.py
modding_tools/windrose_cli/: nexus.py  packaging.py  paths.py  recipes.py
modding_tools/windrose_cli/cli/: __init__.py  errors.py
modding_tools/windrose_cli/config/: __init__.py  env.py
modding_tools/windrose_cli/pipelines/: __init__.py  build.py
modding_tools/windrose_cli/tools/: __init__.py  common.py  cue4parse.py  process.py  repak.py  retoc.py
modding_tools/windrose_cli/workflows/: __init__.py  json_loot.py
mods/: README.md
mods/blackbeard-bounty/: README.md
mods/blackbeard-bounty/docs/: NEXUS_DESCRIPTION.txt  TEST_PLAN.md  build_config.example.json  mod_recipe.json
mods/blackbeard-bounty/scripts/: build_install.ps1
mods/boar-loot/: README.md
mods/boar-loot/docs/: NEXUS_DESCRIPTION.txt
mods/cane-sugar-bounty/: README.md
mods/cane-sugar-bounty/docs/: NEXUS_DESCRIPTION.txt  TEST_PLAN.md  (+3 more)
mods/cayenne-pepper-yield/: README.md
mods/crab-bounty/: README.md
mods/crocodile-bounty/: README.md
mods/dodo-bounty/: README.md
mods/fast-bandages/: README.md
mods/fish-bounty/: README.md
mods/goat-bounty/: README.md
mods/salt-and-coffee-bounty/: README.md
mods/ship-bounty/: README.md
mods/sweet-potato-bounty/: README.md
mods/windrose-bounty/: README.md
mods/wolf-bounty/: README.md
(+48 files in other folders)
