[tool.poetry]
name = "windrose-modding"
version = "0.1.0"
description = "Reusable CLI tooling and mod recipes for Windrose mod development."
authors = ["Windrose Modding Contributors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["modding_tools/tests"]
addopts = "-q"
